# lemming

./: .typos.toml  Cargo.toml  README.md  index.html  sw.js
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  central_panel.rs  lib.rs  main.rs  patch.rs
src/format/: diff.rs  mod.rs  patch.rs
tests/: a.patch  b.patch  b_icnal.patch  panic.diff
